# Maple

./: .env  .env.dev  .gitignore  LICENSE  README.md  README_en.md  pyproject.toml  requirements.txt
lang/: zh-hans.yaml
langs/: en-us.yml  zh-hans.yaml
maple/: _lang.py  _onebot.py  cave.py  echo.py  github.py  hot.py
src/plugins/: _lang.py  _onebot.py  _rule.py  _sorcery.py  _store.py  _utils.py  cave.py  echo.py  github.py  help.py  hot.py  lang.py  quick_math.py
src/plugins/_gocq/: __init__.py  api.py  model.py
